2023-11-09T01:00:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6805961268 # 1342
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-09
* notice: last 14d: unq all: 5 4138
* notice: prev accum: outdated-unq outdated-all / unq all: 1812 173083 / 1851 177500
* notice: next accum: outdated-unq outdated-all / unq all: 1814 173382 / 1851 177596
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -76 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-10-25] / [2023-10-26 2023-11-08]

2023-11-08T16:17:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6801013969 # 1341
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
* notice: last 14d: unq all: 5 4158
* notice: prev accum: outdated-unq outdated-all / unq all: 1812 173083 / 1851 177408
* notice: next accum: outdated-unq outdated-all / unq all: 1812 173083 / 1851 177500
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -1 -93 / +3 +205 -0 -0 / 3 205
* notice: removed / changed dates: [] / [2023-10-25 2023-11-08]

2023-11-08T08:16:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6795492255 # 1340
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
* notice: last 14d: unq all: 5 4159
* notice: prev accum: outdated-unq outdated-all / unq all: 1812 173083 / 1848 177295
* notice: next accum: outdated-unq outdated-all / unq all: 1812 173083 / 1851 177408
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -0 -91 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-10-25 2023-11-08]

2023-11-08T01:00:11Z: