@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-11-09T01:00:08Z",
+  "timestamp" : "2023-11-09T08:16:46Z",
   "count_outdated" : 173382,
   "uniques_outdated" : 1814,
-  "count" : 177596,
-  "uniques" : 1851,
+  "count" : 177708,
+  "uniques" : 1853,
   "clones" : [
     {
       "timestamp": "2023-10-26T00:00:00Z",
-      "count": 225,
+      "count": 133,
       "count_minmax": [ 113, 301 ],
-      "count_decinc": [ 76, 301 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "count_decinc": [ 168, 301 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 1, 3 ]
     },
     {
       "timestamp": "2023-10-27T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-11-09T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
