@@ -1,11 +1,11 @@
 {
-  "count": 4138,
+  "count": 4158,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-10-26T00:00:00Z",
-      "count": 225,
-      "uniques": 3
+      "count": 133,
+      "uniques": 2
     },
     {
       "timestamp": "2023-10-27T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-11-08T00:00:00Z",
       "count": 301,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-11-09T00:00:00Z",
+      "count": 112,
+      "uniques": 2
     }
   ]
 }
